# Haskell_timeslot_generate

./: README.md  ctx  hsk.cabal  htsg.cabal
src/: Main.hs  TimeslotGen.hs  TimeslotGenC.hs  TimeslotRead.hs  TsCmd.hs
