cabal-version:      2.4
name:               htsg
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             forsilence
maintainer:         3312034934@qq.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

executable htsg
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:  TimeslotGen
                  TimeslotGenC
                  TsCmd
                  TimeslotRead

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    
    base ^>=4.17.2.0,
    containers ^>=0.6.7,
    array ^>=0.5.4.0,
    bytestring ^>=0.12.1.0,
    aeson ^>=2.2.1.0,
    cmdargs ^>=0.10.22,
    text ^>=1.2.4.1,

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite tests
  type:exitcode-stdio-1.0
  main-is: UnitTest.hs
  hs-source-dirs: 
    test,
    src
  build-depends:
    HUnit ^>=1.6.2.0,
    base ^>=4.17.2.0

